[tool.poetry]
name = "kenpo"
version = "0.1.0"
description = ""
authors = ["Johannes Döllinger <johannes.doellinger@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^9.1.15"
mkdocs-roamlinks-plugin = "^0.3.2"
mkdocs-video = "^1.5.0"
mkdocs-include-dir-to-nav = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
